# racetrack_svg_framework

./: .gitignore  README.md  pyproject.toml  requirements.txt  routing_4.ipynb  setup.py  tmp.py
framework/: racetrack.py  rt_annotations_mixin.py  rt_art_mixin.py  rt_boxplot_mixin.py  rt_calendarheatmap_mixin.py  rt_chord_diagram_mixin.py  rt_choroplethmap_mixin.py  rt_color_manager.py  rt_component.py  rt_datamanip_mixin.py  rt_entity_position.py  rt_geomaps_mixin.py  rt_geometry_mixin.py  rt_graph_layouts_mixin.py  rt_histogram_mixin.py  rt_json_mixin.py  rt_layouts_mixin.py  rt_link_mixin.py  rt_linknode_mixin.py  rt_linknodeshortest_mixin.py  rt_ontologies_mixin.py  rt_panel_mixin.py  rt_periodic_barchart_mixin.py  rt_piechart_mixin.py  rt_shapes_mixin.py  rt_small_multiples_mixin.py  rt_temporal_barchart_mixin.py  rt_text_mixin.py  rt_timeline_mixin.py  rt_wordcloud_mixin.py  rt_xy_mixin.py
how_to/: intro.ipynb  layouts.ipynb  link_node.ipynb  other_visualizations.ipynb  pandas_vs_polars.ipynb  scatterplots_comparisons.ipynb  small_multiples.ipynb  tag_rows.ipynb  temporal.ipynb  xy.ipynb
rtsvg/: __init__.py  circle_packer.py  mds_at_scale.py  polars_force_directed_layout.py  polars_spring_layout.py  rt_annotations_mixin.py  rt_boxplot_mixin.py  rt_chord_diagram_mixin.py  rt_color_manager.py  rt_component.py  rt_geometry_mixin.py  rt_graph_interactive_layout.py  rt_graph_interactive_panel.py  rt_graph_layouts_mixin.py  rt_interactive_graph_layout.py  rt_link_mixin.py  rt_linknode_mixin.py  rt_ontologies_mixin.py  rt_panel_mixin.py  rt_piechart_mixin.py  rtsvg.py  (+12 more)
(+410 files in other folders)
