[build-system]
requires = [
  "networkx",
  "nltk",
  "numpy",
  "pandas",
  "panel ~= 0.14.2",
  "shapely",
  "spacy",
  "squarify",
  "svglib",
  "tensorflow",
  "torch",
  "transformers",
  "umap-learn"
]

# For SpaCy, still need to also download the configuration file:
# python -m spacy download en_core_web_sm